# PianoBooster

./: BUILD.md  CMakeLists.txt  README.md  license.txt
.github/workflows/: build.yml
doc/dev/: class_structure.md
icons/MacOS/: pianobooster.icns
src/: Bar.h  CMakeLists.txt  Cfg.cpp  Cfg.h  Conductor.cpp  Conductor.h  Draw.cpp  GlView.cpp  GlView.h  GuiMidiSetupDialog.cpp  GuiPreferencesDialog.cpp  GuiPreferencesDialog.h  GuiPreferencesDialog.ui  GuiSidePanel.cpp  GuiSidePanel.ui  GuiTopBar.cpp  GuiTopBar.ui  MidiDeviceBase.h  MidiDeviceFluidSynth.h  MidiDeviceRt.cpp  MidiDeviceRt.h  MidiEvent.h  MidiFile.h  MidiTrack.cpp  MidiTrack.h  Notation.cpp  Notation.h  QtMain.cpp  QtWindow.cpp  QtWindow.h  Score.cpp  Settings.cpp  Settings.h  Song.cpp  Song.h  StavePosition.cpp  Symbol.h  Util.cpp  Util.h  application.qrc  (+1 more)
src/images/: pianobooster.icns
tools/: genicons.sh
translations/: CMakeLists.txt
